Environment and namespace strcture ironed out, starting compilation steps